app/assets/stylesheets/map.css.scss
$color_alt_background: #ededee;
$color_alt_background2: #dce8e3;
$color_alt_background3: #d8d7d5;
$color_highlight_background: #edebca;
$color_strong_background: #b8b308;
$color_strong2_background: #72a492;
$color_strong: #a49a00;
$color_main: #212121;
$color_border: #d5d6d5;
$color_border_visible: #ccc;
$color_faded: #777;
$color_notice: #999;
$color_error: #933;

$width_page: 960px;
$padding_page: 17px;
$width_map: 680px;
$width_compare_prompt: 30px;
$width_region_info: $width_page - $width_map - (2 * $padding_page);
$width_region_info_heading: $width_region_info * 0.6;
$height_map: 600px;

html {
  margin: 0;
  padding: 0;
}

body {
  width: $width_page;
  margin: 0 auto;
  padding: 0;
}

#opencensus-wrapper {
  position: relative;
  padding: 0 $padding_page;
  color: $color_main;
  font-size: 20px;

  * {
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
  }

  form.location {
    float: left;
    position: relative;
    margin: 0;
    padding: 0;

    p {
      position: relative;
      margin: 0;
      padding: 0;
      overflow: hidden;
    }

    input.text {
      border: 2px solid $color_strong;
      width: 28em;
      line-height: 2.0;
      padding: 0 .5em;
      margin: 2px; // Google Chrome default
      font-size: .8em;
      font-weight: normal;
    }

    input.submit {
      border: 2px solid $color_strong;
      margin: 2px;
      line-height: 1.6;
      background: $color_strong_background;
      color: $color_strong;
      font-size: 1em;
    }

    div.status {
      position: absolute;
      top: 2px;
      margin-top: 2px;
      line-height: 2;
      left: 38em;
      margin-left: -10em;
      width: 10em;
      text-align: right;
      white-space: nowrap;
      text-transform: none;
      font-weight: normal;
      font-size: .8em;
    }

    div.notice {
      color: $color_notice;
    }

    div.error {
      color: $color_error;
    }
  }

  .nav {
    float: left;
    background: $color_alt_background;
    margin-right: .5em;

    a.ui-selectmenu {
      height: 2em;
      line-height: 1;
    }

    span.ui-selectmenu-status {
      line-height: 1;
      font-size: .8em;
      text-transform: uppercase;
      background: $color_main;
      color: white;

      span.prompt {
        font-size: .8em;
        text-transform: none;
        font-weight: normal;
      }
    }

    div.ui-selectmenu-menu {
      margin: 0;
      padding: 0;
      background: $color_alt_background;

      li {
        margin: 0;
        padding: .5em .5em;
        vertical-align: top;
        height: 1em;
        line-height: 1;
        cursor: pointer;

        &.selected {
          background: $color_highlight_background;
        }

        a {
          padding: 0;
          font-size: .9em;
          display: block;
          text-transform: uppercase;
          text-decoration: none;
          color: $color_main;
        }
      }
    }
  }

  .map-and-info {
    clear: both;
    position: relative;
    height: $height_map;
    overflow: hidden;

    .map {
      position: absolute;
      height: $height_map;
      width: $width_map;
    }

    .region-info {
      position: absolute;
      width: (2 * $width_region_info);
      height: $height_map;
      background: $color_alt_background;
      left: $width_map;
      top: 0;

      .compare-prompt {
        position: absolute;
        height: $width_compare_prompt;
        top: 80px;
        width: 100px;
        left: -(100px + $width_compare_prompt) / 2;
        overflow: hidden;

        -webkit-transform: rotate(-90deg); 
        -moz-transform: rotate(-90deg); 
        transform: rotate(-90deg);
        filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
        background: $color_main;
        color: $color_alt_background;

        a {
          display: block;
          height: $width_compare_prompt;
          text-align: center;
          color: $color_alt_background;
          line-height: $width_compare_prompt;
          text-decoration: none;
          font-weight: normal;
          font-size: .8em;
        }
      }

      h2 {
        margin: 0 0 .25em;
        padding: 0;
        font-size: 1em;
      }

      table {
        border-collapse: collapse;
        width: 2 * $width_region_info;
      }

      th {
        font-size: .85em;
        vertical-align: top;
      }

      th.compare-region, td.compare-region {
        background-color: $color_alt_background3;
      }

      tbody span {
        vertical-align: middle;
      }

      tbody span.bar {
        display: inline-block;
        height: 25px;
        width: 0;
      }

      tbody.pop span.bar {
        background: url(image_path('population-repeated.png'));
      }

      tbody.dwe div.dwe span.bar {
        background: url(image_path('dwellings-repeated.png'));
      }

      tbody.dwe div.popdwe span.bar {
        background: url(image_path('popdwe-bar.png'));
      }

      thead th.region, thead th.compare-region {
        width: $width_region_info;
        overflow: hidden;
        padding: 0;

        div.prompt {
          font-size: .75em;
          font-weight: normal;
          color: $color_faded;
          line-height: 21px;

          a {
            font-weight: normal;
            text-decoration: none;
          }

          img {
            display: inline-block;
            vertical-align: middle;
          }
        }
      }

      thead.sub th {
        text-align: left;
        font-size: .7em;
        border-top: 1px solid $color_border_visible;
        padding: 6px 9px 0;
        line-height: 1.4;
      }

      thead.pop th {
        border-top: none;
      }

      td.region, td.compare-region {
        width: $width_region_info - 18px;
        padding: 0 9px 6px;
        line-height: 31px;

        div.age-chart {
          line-height: 1.8;
          height: 250px;

          .jqplot-xaxis {
            height: 18px;
          }
        }
      }

      span.unit {
        font-size: .9em;
        font-weight: normal;
      }

      td {
        font-size: .7em;
        vertical-align: top;

        span.value {
          font-size: 1.25em;
          color: $color_strong;
        }
      }

      div.sexm, div.sexf {
        display: inline;
        vertical-align: middle;

        img, span {
          vertical-align: middle;
          line-height: 25px;
        }
      }

      tr.ages td {
        font-size: 1em;

        div.graph div {
          font-size: .7em;
          font-weight: normal;
        }
      }

      form { // region-select
        white-space: nowrap;
        margin-bottom: .2em;

        li {
          text-align: left;
        }

        a.ui-selectmenu {
          display: block;
          // there's a 1px border
          width: ($width_region_info - 2px) !important;
          overflow: hidden;
          height: 2.2em;
        }

        a {
          font-weight: normal;
        }

        span.ui-selectmenu-status {
          padding-top: .3em;
          padding-bottom: .3em;
        }

        span.region-type {
          display: block;
          text-align: center;
          font-size: .75em;
          line-height: 1;
          font-weight: normal;
        }

        span.region-name {
          display: block;
          text-align: center;
          font-size: .85em;
          line-height: 1;
        }
      }

      tbody.links {
        height: $height_map;
        vertical-align: top;

        a {
          display: block;
          font-weight: normal;
          font-size: .8em;
          text-align: center;
          line-height: 1.5;
        }
      }
    }
  }

  .legend {
    background: $color_alt_background2;

    ul {
      margin: 0;
      padding: .2em 0;
      list-style: none;
      position: relative;
    }

    li {
      display: inline;
      margin: 0;
      padding: 0 .5em;
      font-size: .8em;
      line-height: 1.8;
      vertical-align: middle;

      .swatch {
        display: inline-block;
        width: 1em;
        height: 1em;
        margin-right: .3em;
        border: 2px solid white;
        vertical-align: middle;
      }
    }
  }
}

